app/src/main/java/com/example/androidtestcase/data/error/ErrorHandler.kt
package com.example.androidtestcase.data.error

interface ErrorHandler {

    fun handleError(throwable: Throwable?): BaseApiError
}